// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RLS Policies – supabase/reset.sql > snapshot: all CREATE POLICY names 1`] = `
[
  "Allow admin deletes on concerts",
  "Allow admin inserts on concerts",
  "Allow admin updates on concerts",
  "accreditation_requests: admin all",
  "accreditation_requests: own insert",
  "accreditation_requests: own read",
  "admin_audit_log: admin insert",
  "admin_audit_log: admin read",
  "api_credentials_admin_only",
  "app_logs: admin read",
  "app_logs: authenticated insert",
  "artist_assets_admin_all",
  "artist_assets_delete_own",
  "artist_assets_insert_own",
  "artist_assets_select_own",
  "artist_billing_profiles: admin all",
  "artist_billing_profiles: artist read own",
  "artist_billing_profiles: artist write own",
  "artist_bio_events: admin editor read",
  "artist_bio_events: anonymous insert",
  "artist_bio_events: journalist insert own",
  "artist_bio_versions: admin editor manage",
  "artist_documents: admin all",
  "artist_documents: artist read own",
  "artist_documents: artist write own",
  "artist_epks: admin all",
  "artist_epks: artist insert own",
  "artist_epks: artist read own",
  "artist_epks: artist update own",
  "artist_epks: journalist read full bio",
  "artist_epks: public read short bio",
  "artist_epks: public read visible",
  "artist_invoices: admin all",
  "artist_invoices: artist read own",
  "artist_invoices: artist write own",
  "artist_listener_metrics: admin all",
  "artist_listener_metrics: artist read own",
  "artist_members: admin all",
  "artist_members: own read",
  "artist_replies_admin_all",
  "artist_replies_insert_own",
  "artist_replies_select_own",
  "artist_territory_metrics: admin all",
  "artist_territory_metrics: artist read own",
  "artists: admin delete",
  "artists: can_manage_artists insert",
  "artists: can_manage_artists update",
  "artists: own artist update",
  "artists: public read visible",
  "asset_artists: authenticated read",
  "asset_artists: editor+ delete",
  "asset_artists: editor+ write",
  "asset_folders: admin delete",
  "asset_folders: authenticated read",
  "asset_folders: can_view_admin_panel update",
  "asset_folders: can_view_admin_panel write",
  "assets: admin delete",
  "assets: authenticated read",
  "assets: can_view_admin_panel insert",
  "assets: can_view_admin_panel update",
  "assets: public press read",
  "ban_history: admin insert",
  "ban_history: admin read",
  "carry_forwards: admin all",
  "carry_forwards: artist read own",
  "concert_artists: admin all",
  "concert_artists: artist manage",
  "concert_artists: public read",
  "concerts: artist manage own",
  "concerts: artist own delete",
  "concerts: artist own insert",
  "concerts: artist own read",
  "concerts: artist own update",
  "concerts: public read visible",
  "custom_permission_definitions: admin read",
  "custom_permission_definitions: admin write",
  "custom_role_permissions: admin read",
  "custom_role_permissions: admin write",
  "custom_roles: admin read",
  "custom_roles: admin write",
  "distributor_import_batches: admin all",
  "editor_activity_log: admin read",
  "editor_activity_log: editor insert own",
  "editor_activity_log: editor read own",
  "editor_notifications: admin manage",
  "editor_notifications: editor read own",
  "editor_notifications: editor update own",
  "epk_download_events: admin all",
  "epk_download_events: artist read own",
  "epk_fonts: admin all",
  "epk_fonts: artist delete own",
  "epk_fonts: artist insert own",
  "epk_fonts: artist read own",
  "epk_fonts: public read visible artist",
  "epk_share_links: admin all",
  "epk_share_links: artist insert own",
  "epk_share_links: artist read own",
  "epk_share_links: artist update own",
  "epk_templates: admin all",
  "epk_templates: read published",
  "epk_versions: admin all",
  "epk_versions: artist insert own",
  "epk_versions: artist read own",
  "event_impact: admin all",
  "event_impact: artist read own",
  "financial_audit: admin insert",
  "financial_audit: admin read",
  "genres_read_public",
  "genres_write_admin",
  "interview_requests: artist read own",
  "interview_requests: artist update own",
  "interview_requests: journalist manage own",
  "journalist_applications: admin all",
  "journalist_applications: own insert",
  "journalist_applications: own read",
  "journalist_downloads: admin read",
  "journalist_downloads: own insert",
  "journalist_downloads: own read",
  "label_messages: admin all",
  "label_messages: artist own read",
  "media_files: admin delete",
  "media_files: authenticated read",
  "media_files: can_view_admin_panel update",
  "media_files: can_view_admin_panel write",
  "media_folders: admin delete",
  "media_folders: authenticated read",
  "media_folders: can_view_admin_panel update",
  "media_folders: can_view_admin_panel write",
  "message_attachments: admin all",
  "message_attachments: artist own read",
  "message_folders: admin all",
  "message_rules: admin all",
  "message_templates: admin all",
  "news_post_artists: can_publish_news write",
  "news_post_artists: public read",
  "news_posts: admin delete",
  "news_posts: can_edit_news update",
  "news_posts: can_publish_news insert",
  "news_posts: public read",
  "portal_attach: admin all",
  "portal_attach: via message sender",
  "portal_feature_flags: admin write",
  "portal_feature_flags: authenticated read",
  "portal_messages: admin all",
  "portal_messages: recipient read",
  "portal_messages: sender own",
  "portal_msg_folders: admin all",
  "portal_msg_folders: artist own",
  "press_kit_items: can_view_admin_panel delete",
  "press_kit_items: can_view_admin_panel insert",
  "press_kit_items: can_view_admin_panel update",
  "press_kit_items: public read",
  "press_photos: admin all",
  "press_photos: public read",
  "promo_log: admin all",
  "promo_log: artist read",
  "promo_tracks: admin all",
  "promo_tracks: journalist read",
  "rbac_audit_log: admin insert",
  "rbac_audit_log: admin read",
  "release_artists: can_manage_releases write",
  "release_artists: public read",
  "release_checklists: admin all",
  "release_checklists: artist insert own",
  "release_checklists: artist read own",
  "release_checklists: artist update own",
  "release_submissions: artist insert own",
  "release_submissions: artist read own",
  "release_submissions: editor+ read all",
  "release_submissions: editor+ update",
  "releases: admin delete",
  "releases: artist own read",
  "releases: can_manage_releases insert",
  "releases: can_manage_releases update",
  "releases: public read visible",
  "role_changes: admin insert",
  "role_changes: admin read",
  "role_permissions: admin update",
  "role_permissions: authenticated read",
  "sales_statement_line_items: admin all",
  "sales_statement_line_items: artist read own",
  "sales_statements: admin all",
  "sales_statements: artist read own",
  "settlement_ledger: admin all",
  "settlement_ledger: artist read own",
  "settlement_periods: admin all",
  "site_settings_admin_write",
  "site_settings_public_read",
  "sos_period_summaries: admin all",
  "sos_rules_presets: admin all",
  "streaming_stats: admin all",
  "streaming_stats: artist read own",
  "submission_form_schema: editor+ write",
  "submission_form_schema: public read",
  "sync_logs: editor+ read",
  "sync_queue: admin all",
  "user_custom_roles: admin read",
  "user_custom_roles: admin write",
  "user_roles: admin all",
  "user_roles: own read",
  "users: admin read all",
  "users: admin update all",
  "users: own read",
  "users: own update",
  "video_submissions: artist insert own",
  "video_submissions: artist read own",
  "video_submissions: editor+ read all",
  "video_submissions: editor+ update",
  "videos: admin delete",
  "videos: can_manage_videos insert",
  "videos: can_manage_videos update",
  "videos: public read",
]
`;

exports[`RLS Policies – supabase/reset.sql > snapshot: all tables with RLS enabled 1`] = `
[
  "accreditation_requests",
  "admin_audit_log",
  "api_credentials",
  "app_logs",
  "artist_assets",
  "artist_billing_profiles",
  "artist_bio_events",
  "artist_bio_versions",
  "artist_documents",
  "artist_epks",
  "artist_invoices",
  "artist_listener_metrics",
  "artist_members",
  "artist_replies",
  "artist_settlement_ledger",
  "artist_territory_metrics",
  "artists",
  "asset_artists",
  "asset_folders",
  "assets",
  "ban_history",
  "concert_artists",
  "concerts",
  "custom_permission_definitions",
  "custom_role_permissions",
  "custom_roles",
  "distributor_import_batches",
  "editor_activity_log",
  "editor_notifications",
  "epk_download_events",
  "epk_fonts",
  "epk_share_links",
  "epk_templates",
  "epk_versions",
  "event_impact",
  "financial_audit_events",
  "genres",
  "idempotency_keys",
  "interview_requests",
  "journalist_applications",
  "journalist_downloads",
  "label_messages",
  "media_files",
  "media_folders",
  "message_attachments",
  "message_folders",
  "message_rules",
  "message_templates",
  "news_post_artists",
  "news_posts",
  "period_carry_forwards",
  "portal_feature_flags",
  "portal_message_attachments",
  "portal_message_folders",
  "portal_messages",
  "press_kit_items",
  "press_photos",
  "promo_log_entries",
  "promo_tracks",
  "rbac_audit_log",
  "release_artists",
  "release_checklists",
  "release_submissions",
  "releases",
  "role_changes",
  "role_permissions",
  "sales_statement_line_items",
  "sales_statements",
  "settlement_periods",
  "site_settings",
  "sos_period_summaries",
  "sos_rules_presets",
  "streaming_stats",
  "submission_form_schema",
  "sync_logs",
  "sync_queue",
  "user_custom_roles",
  "user_roles",
  "users",
  "video_submissions",
  "videos",
]
`;

exports[`RLS Policies – supabase/reset.sql > snapshot: policies per table (extracted from CREATE POLICY ... ON ...) 1`] = `
{
  "accreditation_requests": [
    "accreditation_requests: admin all",
    "accreditation_requests: own insert",
    "accreditation_requests: own read",
  ],
  "admin_audit_log": [
    "admin_audit_log: admin insert",
    "admin_audit_log: admin read",
  ],
  "api_credentials": [
    "api_credentials_admin_only",
  ],
  "app_logs": [
    "app_logs: admin read",
    "app_logs: authenticated insert",
  ],
  "artist_assets": [
    "artist_assets_admin_all",
    "artist_assets_delete_own",
    "artist_assets_insert_own",
    "artist_assets_select_own",
  ],
  "artist_billing_profiles": [
    "artist_billing_profiles: admin all",
    "artist_billing_profiles: artist read own",
    "artist_billing_profiles: artist write own",
  ],
  "artist_bio_events": [
    "artist_bio_events: admin editor read",
    "artist_bio_events: anonymous insert",
    "artist_bio_events: journalist insert own",
  ],
  "artist_bio_versions": [
    "artist_bio_versions: admin editor manage",
  ],
  "artist_documents": [
    "artist_documents: admin all",
    "artist_documents: artist read own",
    "artist_documents: artist write own",
  ],
  "artist_epks": [
    "artist_epks: admin all",
    "artist_epks: artist insert own",
    "artist_epks: artist read own",
    "artist_epks: artist update own",
    "artist_epks: journalist read full bio",
    "artist_epks: public read short bio",
    "artist_epks: public read visible",
  ],
  "artist_invoices": [
    "artist_invoices: admin all",
    "artist_invoices: artist read own",
    "artist_invoices: artist write own",
  ],
  "artist_listener_metrics": [
    "artist_listener_metrics: admin all",
    "artist_listener_metrics: artist read own",
  ],
  "artist_members": [
    "artist_members: admin all",
    "artist_members: own read",
  ],
  "artist_replies": [
    "artist_replies_admin_all",
    "artist_replies_insert_own",
    "artist_replies_select_own",
  ],
  "artist_settlement_ledger": [
    "settlement_ledger: admin all",
    "settlement_ledger: artist read own",
  ],
  "artist_territory_metrics": [
    "artist_territory_metrics: admin all",
    "artist_territory_metrics: artist read own",
  ],
  "artists": [
    "artists: admin delete",
    "artists: can_manage_artists insert",
    "artists: can_manage_artists update",
    "artists: own artist update",
    "artists: public read visible",
  ],
  "asset_artists": [
    "asset_artists: authenticated read",
    "asset_artists: editor+ delete",
    "asset_artists: editor+ write",
  ],
  "asset_folders": [
    "asset_folders: admin delete",
    "asset_folders: authenticated read",
    "asset_folders: can_view_admin_panel update",
    "asset_folders: can_view_admin_panel write",
  ],
  "assets": [
    "assets: admin delete",
    "assets: authenticated read",
    "assets: can_view_admin_panel insert",
    "assets: can_view_admin_panel update",
    "assets: public press read",
  ],
  "ban_history": [
    "ban_history: admin insert",
    "ban_history: admin read",
  ],
  "concert_artists": [
    "concert_artists: admin all",
    "concert_artists: artist manage",
    "concert_artists: public read",
  ],
  "concerts": [
    "Allow admin deletes on concerts",
    "Allow admin inserts on concerts",
    "Allow admin updates on concerts",
    "concerts: artist manage own",
    "concerts: artist own delete",
    "concerts: artist own insert",
    "concerts: artist own read",
    "concerts: artist own update",
    "concerts: public read visible",
  ],
  "custom_permission_definitions": [
    "custom_permission_definitions: admin read",
    "custom_permission_definitions: admin write",
  ],
  "custom_role_permissions": [
    "custom_role_permissions: admin read",
    "custom_role_permissions: admin write",
  ],
  "custom_roles": [
    "custom_roles: admin read",
    "custom_roles: admin write",
  ],
  "distributor_import_batches": [
    "distributor_import_batches: admin all",
  ],
  "editor_activity_log": [
    "editor_activity_log: admin read",
    "editor_activity_log: editor insert own",
    "editor_activity_log: editor read own",
  ],
  "editor_notifications": [
    "editor_notifications: admin manage",
    "editor_notifications: editor read own",
    "editor_notifications: editor update own",
  ],
  "epk_download_events": [
    "epk_download_events: admin all",
    "epk_download_events: artist read own",
  ],
  "epk_fonts": [
    "epk_fonts: admin all",
    "epk_fonts: artist delete own",
    "epk_fonts: artist insert own",
    "epk_fonts: artist read own",
    "epk_fonts: public read visible artist",
  ],
  "epk_share_links": [
    "epk_share_links: admin all",
    "epk_share_links: artist insert own",
    "epk_share_links: artist read own",
    "epk_share_links: artist update own",
  ],
  "epk_templates": [
    "epk_templates: admin all",
    "epk_templates: read published",
  ],
  "epk_versions": [
    "epk_versions: admin all",
    "epk_versions: artist insert own",
    "epk_versions: artist read own",
  ],
  "event_impact": [
    "event_impact: admin all",
    "event_impact: artist read own",
  ],
  "financial_audit_events": [
    "financial_audit: admin insert",
    "financial_audit: admin read",
  ],
  "genres": [
    "genres_read_public",
    "genres_write_admin",
  ],
  "interview_requests": [
    "interview_requests: artist read own",
    "interview_requests: artist update own",
    "interview_requests: journalist manage own",
  ],
  "journalist_applications": [
    "journalist_applications: admin all",
    "journalist_applications: own insert",
    "journalist_applications: own read",
  ],
  "journalist_downloads": [
    "journalist_downloads: admin read",
    "journalist_downloads: own insert",
    "journalist_downloads: own read",
  ],
  "label_messages": [
    "label_messages: admin all",
    "label_messages: artist own read",
  ],
  "media_files": [
    "media_files: admin delete",
    "media_files: authenticated read",
    "media_files: can_view_admin_panel update",
    "media_files: can_view_admin_panel write",
  ],
  "media_folders": [
    "media_folders: admin delete",
    "media_folders: authenticated read",
    "media_folders: can_view_admin_panel update",
    "media_folders: can_view_admin_panel write",
  ],
  "message_attachments": [
    "message_attachments: admin all",
    "message_attachments: artist own read",
  ],
  "message_folders": [
    "message_folders: admin all",
  ],
  "message_rules": [
    "message_rules: admin all",
  ],
  "message_templates": [
    "message_templates: admin all",
  ],
  "news_post_artists": [
    "news_post_artists: can_publish_news write",
    "news_post_artists: public read",
  ],
  "news_posts": [
    "news_posts: admin delete",
    "news_posts: can_edit_news update",
    "news_posts: can_publish_news insert",
    "news_posts: public read",
  ],
  "period_carry_forwards": [
    "carry_forwards: admin all",
    "carry_forwards: artist read own",
  ],
  "portal_feature_flags": [
    "portal_feature_flags: admin write",
    "portal_feature_flags: authenticated read",
  ],
  "portal_message_attachments": [
    "portal_attach: admin all",
    "portal_attach: via message sender",
  ],
  "portal_message_folders": [
    "portal_msg_folders: admin all",
    "portal_msg_folders: artist own",
  ],
  "portal_messages": [
    "portal_messages: admin all",
    "portal_messages: recipient read",
    "portal_messages: sender own",
  ],
  "press_kit_items": [
    "press_kit_items: can_view_admin_panel delete",
    "press_kit_items: can_view_admin_panel insert",
    "press_kit_items: can_view_admin_panel update",
    "press_kit_items: public read",
  ],
  "press_photos": [
    "press_photos: admin all",
    "press_photos: public read",
  ],
  "promo_log_entries": [
    "promo_log: admin all",
    "promo_log: artist read",
  ],
  "promo_tracks": [
    "promo_tracks: admin all",
    "promo_tracks: journalist read",
  ],
  "rbac_audit_log": [
    "rbac_audit_log: admin insert",
    "rbac_audit_log: admin read",
  ],
  "release_artists": [
    "release_artists: can_manage_releases write",
    "release_artists: public read",
  ],
  "release_checklists": [
    "release_checklists: admin all",
    "release_checklists: artist insert own",
    "release_checklists: artist read own",
    "release_checklists: artist update own",
  ],
  "release_submissions": [
    "release_submissions: artist insert own",
    "release_submissions: artist read own",
    "release_submissions: editor+ read all",
    "release_submissions: editor+ update",
  ],
  "releases": [
    "releases: admin delete",
    "releases: artist own read",
    "releases: can_manage_releases insert",
    "releases: can_manage_releases update",
    "releases: public read visible",
  ],
  "role_changes": [
    "role_changes: admin insert",
    "role_changes: admin read",
  ],
  "role_permissions": [
    "role_permissions: admin update",
    "role_permissions: authenticated read",
  ],
  "sales_statement_line_items": [
    "sales_statement_line_items: admin all",
    "sales_statement_line_items: artist read own",
  ],
  "sales_statements": [
    "sales_statements: admin all",
    "sales_statements: artist read own",
  ],
  "settlement_periods": [
    "settlement_periods: admin all",
  ],
  "site_settings": [
    "site_settings_admin_write",
    "site_settings_public_read",
  ],
  "sos_period_summaries": [
    "sos_period_summaries: admin all",
  ],
  "sos_rules_presets": [
    "sos_rules_presets: admin all",
  ],
  "streaming_stats": [
    "streaming_stats: admin all",
    "streaming_stats: artist read own",
  ],
  "submission_form_schema": [
    "submission_form_schema: editor+ write",
    "submission_form_schema: public read",
  ],
  "sync_logs": [
    "sync_logs: editor+ read",
  ],
  "sync_queue": [
    "sync_queue: admin all",
  ],
  "user_custom_roles": [
    "user_custom_roles: admin read",
    "user_custom_roles: admin write",
  ],
  "user_roles": [
    "user_roles: admin all",
    "user_roles: own read",
  ],
  "users": [
    "users: admin read all",
    "users: admin update all",
    "users: own read",
    "users: own update",
  ],
  "video_submissions": [
    "video_submissions: artist insert own",
    "video_submissions: artist read own",
    "video_submissions: editor+ read all",
    "video_submissions: editor+ update",
  ],
  "videos": [
    "videos: admin delete",
    "videos: can_manage_videos insert",
    "videos: can_manage_videos update",
    "videos: public read",
  ],
}
`;
